--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
   
     <h1>Music Player</h1>
-    <img src="https://images.unsplash.com/photo-1647489238455-fd12b591d064?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=687" alt="image" width="500px">
+    <img src="https://images.unsplash.com/photo-1647489238455-fd12b591d064?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=687" alt="image" width="500px " height="500px">
     <form >
         <input type="range">
         <span>30:00</span>
